# OficinaCode

./: .gitignore  arquitetura.txt  package-lock.json  package.json  packages.json
.github/workflows/: build-alpha.yml
apps/desktop-tauri/: index.html  package-lock.json  package.json  start-bloquin.sh  vite.config.ts
apps/desktop-tauri/src/: App.tsx
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
apps/desktop-tauri/src/services/: hardwareService.ts  projectService.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/blockly/: blocks.ts  generators.ts  toolbox.ts
src/components/: CompactToolbox.tsx
src/components/modals/: BoardSelectionModal.tsx  ErrorModal.tsx  OrphanModal.tsx  SerialMonitor.tsx  UploadModal.tsx
src/screens/: IdeScreen.tsx  LoginScreen.tsx  StudentDashboard.tsx  TeacherDashboard.tsx
